--- a/apache/map.jinja
+++ b/apache/map.jinja
@@ -36,6 +36,7 @@
         'mod_pagespeed_source': 'https://dl-ssl.google.com/dl/linux/direct/mod-pagespeed-stable_current_amd64.deb',
         'mod_xsendfile': 'libapache2-mod-xsendfile',
         'mod_fastcgi': 'libapache2-mod-fastcgi',
+        'mod_jk': 'libapache2-mod-jk',
 
         'vhostdir': '/etc/apache2/sites-available',
         'confdir': '/etc/apache2/conf-available',
