--- a/apache/map.jinja
+++ b/apache/map.jinja
@@ -10,6 +10,7 @@
         'configfile': '/etc/apache2/httpd.conf',
 
         'mod_wsgi': 'www-apache/mod_wsgi',
+        'mod_uwsgi': 'www-apache/mod_uwsgi',
         'mod_fcgid': 'www-apache/mod_fcgid',
 
         'vhostdir': '/etc/apache2/vhosts.d',
@@ -30,6 +31,7 @@
         'portsfile': '/etc/apache2/ports.conf',
 
         'mod_wsgi': 'libapache2-mod-wsgi',
+        'mod_uwsgi': 'libapache2-mod-uwsgi',
         'mod_php5': 'libapache2-mod-php5',
         'mod_perl2': 'libapache2-mod-perl2',
         'mod_fcgid': 'libapache2-mod-fcgid',
@@ -78,6 +80,7 @@
         'configfile': '/etc/apache2/httpd.conf',
 
         'mod_wsgi': 'apache2-mod_wsgi',
+        'mod_uwsgi': 'apache2-mod_uwsgi',
         'mod_php5': 'apache2-mod_php5',
         'mod_fcgid': 'apache2-mod_fcgid',
 
